inou/prp/tests/errors/array_elem_kind_mismatch.prp
/*
:name: array_elem_kind_mismatch
:type: error
:error: (type cannot change|mismatch|string|integer)
*/
// An array element declared as an integer cannot be assigned a string value
// (review cat 3).
mut b:[4]u3 = (0, 0, 0, 0)
b[0] = "hello"
